# MJ-Bench

./: .gitignore  README.md  dataset.py  dpo_generation.py  evaluate_bias_avg.py  evaluate_bias_type.py  get_rm_score.py  inference.py  load_dataset.py  process.py  requirements.txt  split.py  test.py
artifacts/: artifacts_generation.py  coco_humans_prompts.json  llava-caption.py
backup/: bias_dataset.json
bias/: bias_finetune.txt  data_list.py  demographic_generation.py  eval_dataset_generation.py  get_finetune_prompt.py  new_bias_dataset_claude-3-opus.json  new_bias_dataset_gemini-1.5.json  new_bias_dataset_gpt-4-turbo.json  new_bias_dataset_gpt-4o.json
config/: config.yaml  dsi_config.yaml
dpo_data/: image_pair.json  train_alignment.txt
eval/: eval_finetune.py  example.md  generate_json.py  group_evaluation.py
examples/: detector_example.py  image_detect_demo.json  image_editor_example.py
experimental/: ddpo_finetune.py  dpo_finetune.py
finetune_datasets/: artifacts_finetune_prompt.txt  bias_dataset_generate.py  bias_dataset_select.py  biased_finetune_prompt_dict.json  (+4 more)
reward_models/simple-aesthetics-predictor/: LICENSE  README.md  pyproject.toml
reward_models/simple-aesthetics-predictor/.github/workflows/: ci.yaml  deploy_and_release.yaml
reward_models/simple-aesthetics-predictor/aesthetics_predictor/: __init__.py  utils.py  v1.py  v2.py
reward_models/simple-aesthetics-predictor/scripts/: push_to_hub.py
reward_models/simple-aesthetics-predictor/tests/: aesthetics_predictor_v1_test.py  aesthetics_predictor_v2_test.py  utils_test.py
(+1038 files in other folders)
