[tool.poetry]
name = "simple-aesthetics-predictor"
version = "0.0.0" # specified by poetry-dynamic-versioning
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "aesthetics_predictor"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.30.2"
torch = ">=1.0"
torchvision = ">=0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.276"
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
